# MovieScout

./: .gitignore  LICENSE  Makefile  README.md  STRUCTURE.md  environment.yml  pyproject.toml  requirements.txt
moviescout/: config.py  main.py  run.py  tempCodeRunnerFile.py
moviescout/api/: __init__.py  views.py
moviescout/blueprints/: __init__.py
moviescout/blueprints/home/: home.py
moviescout/blueprints/home/static/js/: index.js
moviescout/blueprints/home/templates/: index.html
moviescout/blueprints/movies_chat/: movies_chat.py
moviescout/blueprints/movies_chat/templates/: movie_chat.html
moviescout/blueprints/similar_movies/: similar_movies.py
moviescout/blueprints/similar_movies/templates/: similar_movies.html
moviescout/func/: moviesRAG.py  moviesRecommendation.py
moviescout/resources/: __init__.py  config.py  datasetDownloader.py  modelDownloader.py  moviesRecommendationEngine.py  resources.yaml  searchMovies.py
moviescout/static/css/: styles.css
moviescout/static/js/: index.js  main.js  movie_chat.js  similar_movies.js
moviescout/static/scss/: global.css  global.css.map  global.scss
moviescout/templates/: index.html  modal.html  movie_chat.html  navbar.html  similar_movies.html
moviescout/templates/partials/: details_modal.html  liked_modal.html  navbar.html
moviescout/views/: movies.py
notebooks/: llm_search.ipynb  preprocess.ipynb  semantic_search.ipynb
